fix: adjust spacing

--- a/src/DonationForms/FormDesigns/MultiStepFormDesign/css/_sections.scss
+++ b/src/DonationForms/FormDesigns/MultiStepFormDesign/css/_sections.scss
@@ -5,5 +5,11 @@
         display: flex;
         flex-direction: column;
         gap: var(--givewp-spacing-6);
+
+        &__legend {
+            legend {
+                margin-block-end: 0;
+            }
+        }
     }
 }
