--- a/src/DonationForms/resources/styles/elements/_sections.scss
+++ b/src/DonationForms/resources/styles/elements/_sections.scss
@@ -3,7 +3,6 @@
     &__header {
         font-size: clamp(var(--givewp-spacing-5), 1.28205vw, var(--givewp-spacing-6));
         margin-block-end: var(--givewp-spacing-3);
-        line-height: 24px;
         color: var(--givewp-grey-900);
     }
 
